--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -49,16 +49,31 @@
   <ItemGroup>
     <Compile Include="CSV.cs" />
     <Compile Include="CsvLoader.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="Forms\RegistItemForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RegistItemForm.Designer.cs">
+      <DependentUpon>RegistItemForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SettingOptionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SettingOptionsForm.Designer.cs">
+      <DependentUpon>SettingOptionsForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SettingOptionsForm.resx">
+      <DependentUpon>SettingOptionsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
