--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigDatas.cs" />
     <Compile Include="CSV.cs" />
     <Compile Include="CsvLoader.cs" />
     <Compile Include="Form1.cs">
