--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -47,9 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigDatas.cs" />
-    <Compile Include="CSV.cs" />
-    <Compile Include="CsvLoader.cs" />
+    <Compile Include="Class\ConfigDatas.cs" />
+    <Compile Include="Class\CSV.cs" />
+    <Compile Include="Class\CsvLoader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
