--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Class\ConfigDatas.cs" />
     <Compile Include="Class\CSV.cs" />
     <Compile Include="Class\CsvLoader.cs" />
+    <Compile Include="Class\SeriesDatas.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
