--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -82,6 +82,12 @@
     <Compile Include="Class\CsvLoader.cs" />
     <Compile Include="Class\SeriesClassificationData.cs" />
     <Compile Include="Class\SeriesDatas.cs" />
+    <Compile Include="Forms\EditSeriesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditSeriesForm.Designer.cs">
+      <DependentUpon>EditSeriesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     <Compile Include="Forms\SettingOptionsForm.Designer.cs">
       <DependentUpon>SettingOptionsForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\EditSeriesForm.resx">
+      <DependentUpon>EditSeriesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
