--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -96,11 +96,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Forms\SettingOptionsForm.cs">
+    <Compile Include="Forms\EditItemsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SettingOptionsForm.Designer.cs">
-      <DependentUpon>SettingOptionsForm.cs</DependentUpon>
+    <Compile Include="Forms\EditItemsForm.Designer.cs">
+      <DependentUpon>EditItemsForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Forms\EditSeriesForm.resx">
       <DependentUpon>EditSeriesForm.cs</DependentUpon>
@@ -108,8 +108,8 @@
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SettingOptionsForm.resx">
-      <DependentUpon>SettingOptionsForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\EditItemsForm.resx">
+      <DependentUpon>EditItemsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
