人おり開発が終わったのでリリーステストに移ります

--- a/paymentManger/paymentManger.csproj
+++ b/paymentManger/paymentManger.csproj
@@ -79,7 +79,9 @@
   <ItemGroup>
     <Compile Include="Class\ConfigDatas.cs" />
     <Compile Include="Class\CSV.cs" />
+    <Compile Include="Class\CSVExtender.cs" />
     <Compile Include="Class\CsvLoader.cs" />
+    <Compile Include="Class\SeriesBander.cs" />
     <Compile Include="Class\SeriesClassificationData.cs" />
     <Compile Include="Class\SeriesDatas.cs" />
     <Compile Include="Forms\EditSeriesForm.cs">
